--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
         
         <section>
             <h2>Our Products</h2>
-            <img src="/assets/Client1_AloePlant.png" alt="aloe plant">
-            <img src="/assets/Client1_StringofPearls.png" alt="String of Pearls plant">
-            <img src="/assets/Client1_BirdHouse.png" alt="Birdhouse">
-        </section>
+            <a href="gallery.html">
+            <img id="pic" src="/assets/Client1_AloePlant.png" alt="aloe plant">
+            <img id="pic" src="/assets/Client1_StringofPearls.png" alt="String of Pearls plant">
+            <img id="pic" src="/assets/Client1_BirdHouse.png" alt="Birdhouse">
+            </a>
+         
 
-        <!-- Shopping Perks -->
         <section>
             <h2>Shopping Perks</h2>
             <ul>
@@ -54,7 +55,6 @@
             </ul>
         </section>
 
-        <!-- Categories of Products -->
         <section>
             <h2>Product Categories</h2>
             <ul>
