--- a/gallery.html
+++ b/gallery.html
@@ -27,6 +27,17 @@
        
         <button id="view-cart-button">View Shopping Cart</button>
 
+    
+          <div id="cart-modal" class="modal">
+            <div class="modal-content">
+                <span class="close" id="close-cart-modal">&times;</span>
+                <h2>Your Shopping Cart</h2>
+                <div id="cart-items"></div>
+                <button id="clear-cart-button">Clear Cart</button>
+                <button id="process-order-button">Process Order</button>
+            </div>
+        </div>
+
         <table>
             <tr>
                 <td>
