--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     
     <header>
-        <img src="/assets/Bloom Valley nursery.png" alt="Bloom Valley Nursery Logo" id="logo">
+        <img src="./assets/Bloom Valley nursery.png" alt="Bloom Valley Nursery Logo" id="logo">
         <h1>Bloom Valley Nursery</h1>
         <nav>
             <ul>
@@ -56,9 +56,9 @@
             <button type="button" id="subscribe-button">Subscribe</button>
         </form>
         <div class="social-media">
-            <a href="#">Facebook</a>
-            <a href="#">Instagram</a>
-            <a href="#">Twitter</a>
+            <a href="https://www.facebook.com">Facebook</a>
+            <a href="https://www.instagram.com">Instagram</a>
+            <a href="https://www.twitter.com">Twitter</a>
         </div>
         <nav>
             <ul>
