--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,7 @@
 <body>
     
     <header>
-        <img src="/assets/Bloom Valley nursery.png" alt="Bloom Valley Nursery Logo" id="logo">
+        <img src="./assets/Bloom Valley nursery.png" alt="Bloom Valley Nursery Logo" id="logo">
         <h1>Bloom Valley Nursery</h1>
         <nav>
             <ul>
@@ -41,17 +41,17 @@
         <table>
             <tr>
                 <td>
-                    <img src="/assets/Client1_AloePlant.png" alt="Aloe plant">
+                    <img src="./assets/Client1_AloePlant.png" alt="Aloe plant">
                     <p>Indoor Plant - $20</p>
                     <button class="add-to-cart-button">Add to Cart</button>
                 </td>
                 <td>
-                    <img src="/assets/Client1_StringofPearls.png" alt="String of Pearls">
+                    <img src="./assets/Client1_StringofPearls.png" alt="String of Pearls">
                     <p>Outdoor Plant - $25</p>
                     <button class="add-to-cart-button">Add to Cart</button>
                 </td>
                 <td>
-                    <img src="/assets/Client1_BirdHouse.png" alt="Birdhouse">
+                    <img src="./assets/Client1_BirdHouse.png" alt="Birdhouse">
                     <p>Birdhouse - $25</p>
                     <button class="add-to-cart-button">Add to Cart</button>
                 </td>
@@ -68,9 +68,9 @@
             <button type="button" id="subscribe-button">Subscribe</button>
         </form>
         <div class="social-media">
-            <a href="#">Facebook</a>
-            <a href="#">Instagram</a>
-            <a href="#">Twitter</a>
+            <a href="https://www.facebook.com">Facebook</a>
+            <a href="https://www.instagram.com">Instagram</a>
+            <a href="https://www.twitter.com">Twitter</a>
         </div>
         <nav>
             <ul>
