--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <section>
             <h2>Our Products</h2>
             <a href="gallery.html">
-            <img id="pic" src="/assets/Client1_AloePlant.png" alt="aloe plant">
-            <img id="pic" src="/assets/Client1_StringofPearls.png" alt="String of Pearls plant">
-            <img id="pic" src="/assets/Client1_BirdHouse.png" alt="Birdhouse">
+            <img id="pic" src="./assets/Client1_AloePlant.png" alt="aloe plant">
+            <img id="pic" src="./assets/Client1_StringofPearls.png" alt="String of Pearls plant">
+            <img id="pic" src="./assets/Client1_BirdHouse.png" alt="Birdhouse">
             </a>
          
 
@@ -65,7 +65,7 @@
         </section>
     </main>
 
-    <!-- Footer Section -->
+    
     <footer>
         <form id="subscribe-form">
             <label for="email">Subscribe to our newsletter:</label>
@@ -73,9 +73,9 @@
             <button type="button" id="subscribe-button">Subscribe</button>
         </form>
         <div class="social-media">
-            <a href="#">Facebook</a>
-            <a href="#">Instagram</a>
-            <a href="#">Twitter</a>
+            <a href="https://www.facebook.com">Facebook</a>
+            <a href="https://www.instagram.com">Instagram</a>
+            <a href="https://www.twitter.com">Twitter</a>
         </div>
         <nav>
             <ul>
