--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <img src="/assets/Bloom Valley nursery.png" alt="Bloom Valley Nursery Logo" id="logo">
+        <img src="./assets/Bloom Valley nursery.png" alt="Bloom Valley Nursery Logo" id="logo">
         <h1>Bloom Valley Nursery</h1>
         <nav>
             <ul>
